<resources>
    <string name="app_name">Sugar Crash</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="half">1/2</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="dateConsumed">Date Consumed:\n</string>
    <string name="login"><u>Don\'t have an account? Sign up here!</u></string>
    <string name="createAccount"><u>Already have an account? Log in here!</u></string>
</resources>
